Adicionar nova funcionalidade

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="tittle">Para está mulher incrível:</h1>
+    <h1 class="tittle">Para esta mulher incrível:</h1>
 
     <img class="imagem" id="imagem" src="images/ana1.jpg" alt="Imagem" />
     <p class="text">Clique aqui 👇</p>
