--- a/segunda.html
+++ b/segunda.html
@@ -9,18 +9,18 @@
   <body>
     <div class="carta">
       <p class="linha_texto">
-        Como descrever a mulher por quem me apaixonei? diria que minha mulher é
+        Como descrever a mulher por quem me apaixonei? Diria que minha mulher é
         forte, inteligente e empoderada. Sua beleza vai muito além do que os
-        olhos podem ver, ela está na sua essência, no seu jeito de enfrentar o
+        olhos podem ver; ela está na sua essência, no seu jeito de enfrentar o
         mundo, na luz que ela traz para a minha vida. Ela não só brilha, mas faz
         tudo ao seu redor brilhar também.
       </p>
       <p class="linha_texto">
         A cada dia percebo ainda mais que você é a mulher da minha vida. Meu
         desejo de viver ao seu lado só cresce, compartilhando e realizando todos
-        aqueles sonhos que sempre conversamos, nossa casa, nossos passeios,
-        nossas viagens... Tudo passa a ser especial com você, até de longe você
-        me cativa e transforma meus dias.
+        aqueles sonhos sobre os quais sempre conversamos: nossa casa, nossos
+        passeios, nossas viagens... Tudo se torna especial com você. Até de
+        longe, você me cativa e transforma os meus dias.
       </p>
       <h1 class="ilove">Eu te amo</h1>
       <div class="heart">❤️</div>
